--- a/package.json
+++ b/package.json
@@ -1,4 +1,39 @@
 {
+  "dependencies": {
+    "@amcharts/amcharts5": "^5.3.11",
+    "@amcharts/amcharts5-fonts": "^5.0.1",
+    "@amcharts/amcharts5-geodata": "^5.1.0",
+    "@floating-ui/dom": "^1.2.1",
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fullcalendar/core": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/interaction": "^6.1.5",
+    "@fullcalendar/list": "^6.1.5",
+    "@fullcalendar/timegrid": "^6.1.5",
+    "@tabler/icons-webfont": "^2.2.0",
+    "@yaireo/tagify": "^4.17.8",
+    "accordion-js": "^3.3.2",
+    "apexcharts": "^3.37.2",
+    "boxicons": "^2.1.4",
+    "dropzone": "latest",
+    "feather-icons": "^4.29.0",
+    "flag-icons": "^6.6.6",
+    "highlight.js": "^11.7.0",
+    "js-beautify": "^1.14.7",
+    "resize-observer-polyfill": "^1.5.1",
+    "simple-datatables": "^7.2.0",
+    "swiper": "^9.0.5",
+    "tippy.js": "^6.3.7",
+    "toastify-js": "^1.12.0",
+
+    "flatpickr": "^4.6.13",
+    "quill": "^1.3.6",
+    "boxicons": "^2.1.4",
+    "spinkit": "^2.0.1",
+
+    "tom-select": "^2.2.2",
+    "simplebar": "^6.2.1"
+  },
   "devDependencies": {
     "sass": "^1.69.5",
     "vite": "^5.0.0",
