--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,18 +8,23 @@ FROM registry.docker.com/library/ruby:$RUBY_VERSION-slim
 WORKDIR /rails
 
 # Set up environment variables for development
-ENV RAILS_ENV="development" \
-    BUNDLE_PATH="/usr/local/bundle"
+ENV RAILS_ENV=development
 
-# Install packages required for development
+# Install packages required for development, including curl
 RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y build-essential git libpq-dev libvips pkg-config
+    apt-get install --no-install-recommends -y build-essential git libpq-dev libvips pkg-config curl
+
+# Install Node.js (LTS version), npm, and Yarn
+RUN curl -sL https://deb.nodesource.com/setup_16.x | bash - && \
+    apt-get install -y nodejs && \
+    apt-get install -y npm && \
+    npm install -g yarn
 
 # Copy Gemfile and Gemfile.lock and install gems
 COPY Gemfile Gemfile.lock ./
 RUN bundle install
 
-# Copy application code
+# Copy the application code
 COPY . .
 
 # Expose port for the Rails server
