--- a/compose.yml
+++ b/compose.yml
@@ -25,7 +25,7 @@ services:
   vite:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     volumes:
       - .:/rails
     command: bin/vite dev
