--- a/package.json
+++ b/package.json
@@ -1,4 +1,19 @@
 {
+  "name": "echosight_app",
+  "version": "1.0.0",
+  "description": "Echosight App: A Twitter analytics dashboard providing insights on user engagement and content performance.",
+  "main": "index.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Virgola-Limited/echosight_app.git"
+  },
+  "author": "",
+  "license": "MIT",
   "dependencies": {
     "@amcharts/amcharts5": "^5.3.11",
     "@amcharts/amcharts5-fonts": "^5.0.1",
@@ -15,24 +30,23 @@
     "accordion-js": "^3.3.2",
     "apexcharts": "^3.37.2",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.4.0",
+    "chartkick": "^5.0.1",
     "dropzone": "latest",
     "feather-icons": "^4.29.0",
     "flag-icons": "^6.6.6",
+    "flatpickr": "^4.6.13",
     "highlight.js": "^11.7.0",
     "js-beautify": "^1.14.7",
+    "quill": "^1.3.6",
     "resize-observer-polyfill": "^1.5.1",
     "simple-datatables": "^7.2.0",
+    "simplebar": "^6.2.1",
+    "spinkit": "^2.0.1",
     "swiper": "^9.0.5",
     "tippy.js": "^6.3.7",
     "toastify-js": "^1.12.0",
-
-    "flatpickr": "^4.6.13",
-    "quill": "^1.3.6",
-    "boxicons": "^2.1.4",
-    "spinkit": "^2.0.1",
-
-    "tom-select": "^2.2.2",
-    "simplebar": "^6.2.1"
+    "tom-select": "^2.2.2"
   },
   "devDependencies": {
     "sass": "^1.69.5",
