--- a/package.json
+++ b/package.json
@@ -52,6 +52,15 @@
     "sass": "^1.69.5",
     "vite": "^5.0.0",
     "vite-plugin-full-reload": "^1.1.0",
-    "vite-plugin-ruby": "^5.0.0"
+    "vite-plugin-ruby": "^5.0.0",
+    "@mertasan/tailwindcss-variables": "^2.5.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "^10.4.13",
+    "glob": "^8.1.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.3",
+    "tailwindcss": "^3.3.1"
   }
 }
