--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "tom-select": "^2.2.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "sass": "^1.69.5",
+    "tailwindcss": "^3.3.5",
     "vite": "^5.0.0",
     "vite-plugin-full-reload": "^1.1.0",
     "vite-plugin-ruby": "^5.0.0"
