--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "feather-icons": "^4.29.0",
     "flag-icons": "^6.6.6",
     "flatpickr": "^4.6.13",
+    "flowbite": "^2.2.0",
     "highlight.js": "^11.7.0",
     "js-beautify": "^1.14.7",
     "quill": "^1.3.6",
@@ -52,7 +53,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "sass": "^1.69.5",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "3.2.4",
     "vite": "^5.0.0",
     "vite-plugin-full-reload": "^1.1.0",
     "vite-plugin-ruby": "^5.0.0"
