--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fullcalendar/interaction": "^6.1.5",
     "@fullcalendar/list": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
+    "@rails/ujs": "^7.1.2",
     "@tabler/icons-webfont": "^2.2.0",
     "@yaireo/tagify": "^4.17.8",
     "accordion-js": "^3.3.2",
