--- a/.github/workflows/ruby_tests.yml
+++ b/.github/workflows/ruby_tests.yml
@@ -13,6 +13,7 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: echosight_app_test
+          DISABLE_SLACK_NOTIFY: true
         ports:
           - 5432:5432
         options: >-
