--- a/.github/workflows/ruby_tests.yml
+++ b/.github/workflows/ruby_tests.yml
@@ -24,6 +24,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Cancel Previous Runs
+      uses: styfle/cancel-workflow-action@0.9.1
+      with:
+        access_token: ${{ github.token }}
+
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
