--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "cypress": "^13.7.1",
+    "cypress-on-rails": "^0.1.0",
     "postcss": "^8.4.31",
     "sass": "^1.69.5",
     "tailwindcss": "3.2.4",
