--- a/config/database.yml
+++ b/config/database.yml
@@ -80,8 +80,11 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-production:
-  <<: *default
-  database: echosight_app_production
-  username: echosight_app
-  password: <%= ENV["ECHOSIGHT_APP_DATABASE_PASSWORD"] %>
+
+
+# Not needed by heroku
+# production:
+#   <<: *default
+#   database: echosight_app_production
+#   username: echosight_app
+#   password: <%= ENV["ECHOSIGHT_APP_DATABASE_PASSWORD"] %>
