--- a/.github/workflows/ruby_tests.yml
+++ b/.github/workflows/ruby_tests.yml
@@ -43,6 +43,7 @@ jobs:
         RAILS_ENV: test
         DATABASE_URL: postgres://postgres:postgres@localhost:5432/echosight_app_test
         RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+        DISABLE_SPRING: 1
       run: |
         bin/rails db:create db:schema:load --trace
 
