--- a/spec/fixtures/vcr_cassettes/Twitter__ExistingTweetsUpdaterJob_perform_when_the_user_can_be_found_calls_Twitter__ExistingTweetsUpdaterJob_for_each_syncable_user.yml
+++ b/spec/fixtures/vcr_cassettes/Twitter__ExistingTweetsUpdaterJob_perform_when_the_user_can_be_found_calls_Twitter__ExistingTweetsUpdaterJob_for_each_syncable_user.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: 'https://api.socialdata.tools/twitter/search?query=from:tophertoy%20-filter:replies%20since_id:%20max_id:'
+    uri: 'https://api.socialdata.tools/twitter/search?query=from:tophertoy%20since_id:%20max_id:'
     body:
       encoding: US-ASCII
       string: ''
@@ -56,7 +56,7 @@ http_interactions:
   recorded_at: Tue, 09 Apr 2024 04:35:53 GMT
 - request:
     method: get
-    uri: 'https://api.socialdata.tools/twitter/search?query=from:tophertoy%20-filter:replies%20since_id:%20max_id:'
+    uri: 'https://api.socialdata.tools/twitter/search?query=from:tophertoy%20since_id:%20max_id:'
     body:
       encoding: US-ASCII
       string: ''
