--- a/.github/workflows/ruby_tests.yml
+++ b/.github/workflows/ruby_tests.yml
@@ -81,5 +81,6 @@ jobs:
         RAILS_ENV: test
         RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
         DISABLE_SLACK_NOTIFY: true
+        HEADLESS: true
       run: |
         bundle exec rspec
