--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "18.18.2"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev",
     "build": "vite build",
     "serve": "vite preview"
   },
@@ -28,6 +28,7 @@
     "@fullcalendar/interaction": "^6.1.5",
     "@fullcalendar/list": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
+    "@hotwired/stimulus": "^3.2.2",
     "@rails/ujs": "^7.1.2",
     "@tabler/icons-webfont": "^2.2.0",
     "@yaireo/tagify": "^4.17.8",
@@ -59,6 +60,7 @@
     "tailwindcss": "3.2.4",
     "vite": "^5.0.0",
     "vite-plugin-full-reload": "^1.1.0",
-    "vite-plugin-ruby": "^5.0.0"
+    "vite-plugin-ruby": "^5.0.0",
+    "vite-plugin-stimulus-hmr": "^3.0.0"
   }
 }
