--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "flatpickr": "^4.6.13",
     "flowbite": "^2.2.0",
     "highlight.js": "^11.7.0",
+    "html2canvas": "^1.4.1",
     "js-beautify": "^1.14.7",
     "quill": "^1.3.6",
     "resize-observer-polyfill": "^1.5.1",
