--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,33 @@
+# General application settings
+RAILS_ENV=production
 DEVELOPMENT_EXCEPTION_NOTIFICATIONS=true
 DISABLE_SLACK_NOTIFY=true
 MAILER_PORT=3000
 ALLOW_LOGIN_WITH_USERNAME=true
 SMTP_SETTINGS_SSL=false
 SMTP_SETTINGS_ENABLE_STARTTLS_AUTO=false
-RAILS_ENV=development
 HEADLESS=true
 TRIAL_PERIOD_DAYS=90
-# used for downloading files from S3 production
+PERFORM_CACHING=true
+
+# Database settings
+DATABASE_URL=postgresql://postgres:password@db:5432/echosight_production
+
+# Redis settings
+REDIS_URL=redis://redis:6379/0
+
+# Secret key base for Rails
+SECRET_KEY_BASE=your_secret_key_base
+
+# S3 settings for production
 PRODUCTION_BUCKETEER_BUCKET_NAME=
 PRODUCTION_BUCKETEER_AWS_REGION=
 PRODUCTION_BUCKETEER_AWS_ACCESS_KEY_ID=
 PRODUCTION_BUCKETEER_AWS_SECRET_ACCESS_KEY=
-PERFORM_CACHING=true
+
+# SMTP settings for mailer
+SMTP_SETTINGS_ADDRESS=smtp.example.com
+SMTP_SETTINGS_PORT=587
+SMTP_SETTINGS_USER_NAME=your_email@example.com
+SMTP_SETTINGS_PASSWORD=your_password
+SMTP_SETTINGS_DOMAIN=example.com
