--- a/config/database.yml
+++ b/config/database.yml
@@ -81,10 +81,8 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 
+staging:
+  url: <%= ENV['DATABASE_URL'] %>
 
-# Not needed by heroku
-# production:
-#   <<: *default
-#   database: echosight_app_production
-#   username: echosight_app
-#   password: <%= ENV["ECHOSIGHT_APP_DATABASE_PASSWORD"] %>
+production:
+  url: <%= ENV['DATABASE_URL'] %>
