Fix feature tests not running after upgrading chrome binary

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ RAILS_ENV=development
 HEADLESS=true
 TRIAL_PERIOD_DAYS=0
 PERFORM_CACHING=true
+CHROME_BINARY_PATH="/Users/chris/.cache/selenium/chrome/mac-x64/127.0.6533.119/Google Chrome for Testing.app/Contents/MacOS/Google Chrome for Testing"
